packages/rspack/tests/configCases/errors/experiments-css-off/errors.js
module.exports = [[/Parser and generator builder for module type Css is not registered/]];